clean du code openhab

--- a/openhab/configurations/openhab.cfg
+++ b/openhab/configurations/openhab.cfg
@@ -268,7 +268,7 @@ chart:provider=default
 # the default voice used by the MaryTTS engine. Available voices are: bits1-hsmm 
 # (german, female), bits3-hsmm (german, male), cmu-slt-hsmm (english, male) (optional,
 # defaults to the systems' default voice or the first available voice)
-marytts:voice=bits1-hsmm
+marytts:voice=cmu-slt-hsmm
 
 ###################### Speech-Dispatcher TTS configuration ############################
 #
